<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a9e2f5">

    <TextView
        android:id="@+id/textView"
        android:layout_width="340dp"
        android:layout_height="133dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/convergence"
        android:gravity="center"
        android:text="@string/kreiraj_nalog"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="261dp"
        android:layout_height="54dp"
        android:fontFamily="@font/convergence"
        android:gravity="bottom"
        android:text="@string/korisni_ko_ime"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="293dp"
        android:layout_height="59dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_style"
        android:enabled="false"
        android:fontFamily="@font/convergence"
        android:gravity="center"
        android:text="@string/registruj_se"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/backTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoText" />

    <EditText
        android:id="@+id/username"
        android:layout_width="283dp"
        android:layout_height="55dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:fontFamily="@font/capriola"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColorHint="@color/zxing_custom_viewfinder_laser"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/backTextView"
        android:layout_width="185dp"
        android:layout_height="38dp"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        android:editable="false"
        android:focusable="true"
        android:fontFamily="@font/convergence"
        android:gravity="center"
        android:text="@string/vrati_se_na_prijavu"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="323dp"
        android:layout_height="29dp"
        android:fontFamily="@font/capriola"
        android:gravity="center"
        android:text="@string/text"
        android:textColor="@color/zxing_custom_viewfinder_laser"
        app:layout_constraintBottom_toTopOf="@+id/infoText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/infoText"
        android:layout_width="114dp"
        android:layout_height="42dp"
        android:clickable="true"
        android:editable="false"
        android:focusable="true"
        android:fontFamily="@font/capriola"
        android:gravity="center"
        android:text="@string/codehunt"
        android:textColor="@color/zxing_custom_viewfinder_laser"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>