<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a9e2f5"
    tools:context=".ErrorHandling">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="281dp"
        android:layout_height="62dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:fontFamily="@font/convergence"
        android:text="@string/error_handling_title"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_send_error"
        android:layout_width="163dp"
        android:layout_height="79dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_style"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="@font/convergence"
        android:text="@string/error_handling_button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_message" />

    <EditText
        android:id="@+id/error_message"
        android:layout_width="377dp"
        android:layout_height="481dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:background="@null"
        android:gravity="start"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="@font/convergence"
        android:hint="@string/error_template"
        android:textColorHint="@color/black"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>