<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a9e2f5"
    android:fitsSystemWindows="true"
    tools:context=".QuestionPage">


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#a9e2f5"
        app:headerLayout="@layout/header"
        app:itemIconTint="@color/black"
        app:itemTextColor="#000000"
        app:menu="@menu/main_menu" >

    </com.google.android.material.navigation.NavigationView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#a9e2f5"
        app:layout_constraintBottom_toBottomOf="@+id/questionTxt"
        app:layout_constraintTop_toBottomOf="@+id/questionTxt">


        <TextView
            android:id="@+id/questionTxt"
            android:layout_width="242dp"
            android:layout_height="236dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="33dp"
            android:elevation="5dp"
            android:fontFamily="@font/convergence"
            android:gravity="center"
            android:text="@string/tekst_pitanja"
            android:textColor="#4980a8"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintEnd_toStartOf="@+id/secondHintBtn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/secondHintBtn"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="79dp"
            android:layout_marginBottom="66dp"
            android:background="#a9e2f5"
            app:layout_constraintBottom_toTopOf="@+id/imageView6"
            app:layout_constraintEnd_toStartOf="@+id/firstHintBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_baseline_menu_24" />

        <EditText
            android:id="@+id/answer"
            android:layout_width="345dp"
            android:layout_height="76dp"
            android:layout_marginStart="38dp"
            android:layout_marginEnd="38dp"
            android:layout_marginBottom="182dp"
            android:ems="10"
            android:fontFamily="@font/convergence"
            android:gravity="start|top"
            android:hint="@string/odgovor"
            android:textColor="#4980a8"
            android:textColorHint="#3c86c5"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <Button
            android:id="@+id/checkAnswerBtn"
            android:layout_width="223dp"
            android:layout_height="64dp"
            android:layout_marginBottom="85dp"
            android:background="@drawable/check_answ_style"
            android:fontFamily="@font/convergence"
            android:text="@string/provjeri_odgovor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondHintBtn" />

        <ImageButton
            android:id="@+id/secondHintBtn"
            android:layout_width="116dp"
            android:layout_height="105dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="435dp"
            android:adjustViewBounds="true"
            android:background="@drawable/settings_style"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/checkAnswerBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/firstHintBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/help" />

        <ImageButton
            android:id="@+id/firstHintBtn"
            android:layout_width="88dp"
            android:layout_height="86dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="31dp"
            android:adjustViewBounds="true"
            android:background="@drawable/settings_style"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/questionTxt"
            app:layout_constraintEnd_toStartOf="@+id/secondHintBtn"
            app:layout_constraintStart_toEndOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/help" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="428dp"
            android:layout_height="308dp"
            android:layout_marginBottom="45dp"
            app:layout_constraintBottom_toTopOf="@+id/answer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:srcCompat="@drawable/question_table" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>


